k8s/web-api.development.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: category-classifier-web-api
  labels:
    app: category-classifier-web-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: category-classifier-web-api
  template:
    metadata:
      labels:
        app: category-classifier-web-api
    spec:
      containers:
      - name: category-classifier-web-api
        image: category-classifier-web-api
        # 生きてるかチェック
        # コンテナそのものが立ち上がっているかどうかをチェックするもの
        # livenessProbe:
        #   # an http probe
        #   httpGet:
        #     path: /k8s/healthz
        #     port: 3000
        #     scheme: HTTP
        #   initialDelaySeconds: 15
        #   timeoutSeconds: 1
        # 動くか確認
        # リクエスト受け付け準備が整っているかどうかをチェックするもの
        # readinessProbe:
        #   # an http probe
        #   httpGet:
        #     path: /k8s/readiness
        #     port: 3000
        #     scheme: HTTP
        #   initialDelaySeconds: 20
        #   timeoutSeconds: 5
        ports:
        - containerPort: 5000
