k8s/web-api.service.yml
apiVersion: v1
kind: Service
metadata:
  name: category-classifier-web-api-svc
  labels:
    app: category-classifier-web-api
spec:
  type: ClusterIP
  ports:
    - port: 5000
      # targetPort: 5000
      protocol: TCP
  selector:
    app: category-classifier-web-api
