k8s/web-app.service.yml
apiVersion: v1
kind: Service
metadata:
  name: category-classifier-web-app-svc
  labels:
    app: category-classifier-web-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      # targetPort: 5000
      protocol: TCP
  selector:
    app: category-classifier-web-app
